# character_converter

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: build_and_test.yml  create_release.yml  publish_release.yml
data/: s2t.profile  t2s.profile
src/: character_converter.rs  lib.rs
